roles/emojis (definitely) fix + msg format change + optimisation ?